2000-11-16  John Harper  <jsh@eazel.com>

	* wm.jl (wm-locale-dir): dereference sawfish-locale-directory
	on the remote side, instead of using bindtextdomain

2000-11-14  John Harper  <jsh@eazel.com>

	* widgets/workspace-geometry.jl (monitor-pixbuf-file): search
	load-path for the `../monitor.png' file, instead of just
	assuming that it's relative to the first item of the list

2000-11-08  John Harper  <jsh@eazel.com>

	* version 0.33

2000-11-06  John Harper  <jsh@eazel.com>

	* group.jl, shell.jl: fixed some bugs introduced by the change
	to refresh groups after slot commits

2000-11-02  John Harper  <jsh@eazel.com>

	* group.jl (fetch-group, select-group): added keyword parameter
	FORCE that overrides certain checks

	(refresh-groups-for-slots): new exported function; given a list
	of slots it will resync any groups that contain any of these
	slots

	* apply.jl (do-apply): call refresh-groups-for-slots after
	committing any changes

2000-11-01  John Harper  <jsh@eazel.com>

	* group.jl: some internal reorganization (may help reloading
	group info..)

2000-10-26  John Harper  <jsh@eazel.com>

	* widgets/command.jl: now supports #:user-level's in commands

2000-10-20  John Harper  <jsh@eazel.com>

	* widgets/command.jl: support (but currently ignore)
	user-levels associated with commands

	* user-level.jl (user-level-is-appropriate-p): new function

2000-10-10  John Harper  <john@dcs.warwick.ac.uk>

	* apply.jl (apply-changes-for): catch errors from
	wm-apply-changes and display them in a dialog after reverting
	the changed slots

2000-09-25  John Harper  <john@dcs.warwick.ac.uk>

	* widgets/keymap.jl (make-keymap:binding-item): add a `Key:'
	label to the event widget

	* widgets/event.jl (make-event-item): don't prefix the widget
	with a `Key:' label, it's more useful without it

	* layout.jl (document-slot): handle adding any tooltip embedded
	in the slots documentation string

2000-09-20  John Harper  <john@dcs.warwick.ac.uk>

	* version 0.31
