@@ -75,7 +75,9 @@
       (mapc (lambda (s)
 	      (let ((w (document-slot s)))
 		(set-slot-layout s w)
-		(gtk-box-pack-start box w))) slots)
+		(if (memq 'expand (slot-flags s))
+		    (gtk-box-pack-start box w t t)
+		  (gtk-box-pack-start box w)))) slots)
       (gtk-widget-show box)
       box))
 
@@ -98,27 +100,40 @@
     (let ((doc (slot-doc slot)))
       (if (null doc)
 	  (slot-gtk-widget slot)
-	(let ((hbox (gtk-hbox-new nil box-spacing))
-	      (split (tooltip-split doc)))
-	  (setq doc (remove-newlines (car split)))
-	  (let ((break (if (string-match "\\\\w" doc)
-			   (match-start)
-			 -2)))
-	    (when (> break 0)
-	      (gtk-box-pack-start hbox (make-label (substring doc 0 break))))
-	    (gtk-box-pack-start hbox (slot-gtk-widget slot))
-	    (when (< break (length doc))
-	      (gtk-box-pack-start
-	       hbox (make-label (substring doc (+ break 2)))))
-	    (when (cdr split)
-	      ;; tooltips need a window to receive events..
-	      (let ((ebox (gtk-event-box-new)))
-		(gtk-container-add ebox hbox)
-		(setq hbox ebox))
-	      (tooltip-set hbox (cdr split)))
-	    (gtk-widget-show-all hbox)
-	    hbox)))))
+	(let ((split (tooltip-split doc)))
+	  (define (add-tooltip widget)
+	    (if (cdr split)
+		;; tooltips need a window to receive events..
+		(let ((ebox (gtk-event-box-new)))
+		  (gtk-container-add ebox widget)
+		  (tooltip-set ebox (cdr split))
+		  ebox)
+	      widget))
 
+	  (setq doc (remove-newlines (car split)))
+	  (if (memq 'framed (slot-flags slot))
+	      (let ((frame (gtk-frame-new doc)))
+		(gtk-container-border-width frame box-border)
+		(gtk-frame-set-shadow-type frame 'none)
+		(gtk-container-add frame (slot-gtk-widget slot))
+		(setq frame (add-tooltip frame))
+		(gtk-widget-show-all frame)
+		frame)
+
+	    (let ((hbox (gtk-hbox-new nil box-spacing))
+		  (break (if (string-match "\\\\w" doc)
+			     (match-start)
+			   -2)))
+	      (when (> break 0)
+		(gtk-box-pack-start hbox (make-label (substring doc 0 break))))
+	      (gtk-box-pack-start hbox (slot-gtk-widget slot))
+	      (when (< break (length doc))
+		(gtk-box-pack-start
+		 hbox (make-label (substring doc (+ break 2)))))
+	      (setq hbox (add-tooltip hbox))
+	      (gtk-widget-show-all hbox)
+	      hbox))))))
+    
   (define (remove-newlines string)
     (let loop ((point 0)
 	       (out '()))
